fix(disableScroll): fix scroll mask z-index blocking backdrops
closes #3283, closes #3269, closes #3245

--- a/src/components/backdrop/backdrop.scss
+++ b/src/components/backdrop/backdrop.scss
@@ -1,5 +1,8 @@
 md-backdrop {
   z-index: $z-index-backdrop;
+  &.md-menu-backdrop {
+    z-index: $z-index-menu - 1;
+  }
   &.md-select-backdrop {
     z-index: $z-index-dialog + 1;
   }
